--- a/produtos.css
+++ b/produtos.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-}
-
 a {
     text-decoration: none;
     color: black;
@@ -10,10 +6,9 @@ a {
     text-transform: uppercase;
 }
 
-/* nav a {} */
-
 nav a:hover {
-    color: #ffffff;
+    color: rgb(151, 114, 10);
+    text-decoration: underline;
 }
 
 ul {
@@ -22,6 +17,7 @@ ul {
 
 header {
     background: #bbbbbb;
+    padding: 20px 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -58,15 +54,24 @@ main ul {
 }
 
 main ul li {
-    border: 2px solid;
-    border-radius: 4px;
+    border: 2px solid black;
+    border-radius: 10px;
     width: min-content;
     text-align: center;
+    box-sizing: border-box;
 }
 
 main ul li:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-color: rgb(151, 114, 10);
+}
+
+main ul li:hover h2 {
+    font-size: 24px;
+}
+
+main ul li:active {
+    border-color: #088c19;
 }
 
 main ul li h2 {
@@ -85,4 +90,16 @@ main ul li div {
 
 .descricao {
     font-size: 18px;
+}
+
+footer {
+    padding: 40px 0;
+    text-align: center;
+    background: url(./imagens/bg.jpg);
+}
+
+.copyright {
+    color: white;
+    font-size: 13PX;
+    margin: 20px 0 0;
 }
