--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+nav a:hover {
+    color: rgb(151, 114, 10);
+    text-decoration: underline;
+}
+
+ul {
+    list-style: none;
+}
+
 header {
     background: #bbbbbb;
     padding: 20px 0;
@@ -6,77 +23,83 @@ header {
     justify-content: space-around;
 }
 
-.caixa {
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
+nav li {
+    display: inline;
+    margin-right: 2rem;
+}
+
+nav ul {
+    justify-content: space-between;
 }
 
 nav {
-    position: absolute;
-    top: 110px;
-    right: 0;
+
+    font-family: 'Times New Roman', Times, serif;
 }
 
-nav li {
-    display: inline;
-    margin-left: 15px;
+main {
+
+    min-height: 24rem;
+
 }
 
-nav a {
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
-}
-
-nav a:hover {
-    color: rgb(151, 114, 10);
-    text-decoration: underline;
-}
-
-.titulo-principal {
-    padding-left: 20px;
-}
-
-#banner {
-    width: 100%;
-}
-
-.principal {
-    background: #cccccc;
-    padding: 30px;
-}
-
-strong em {
-    color: #ff0000;
-}
-
-.titulo-centralizado {
-    text-align: center;
-}
-
-#missao {
-    font-size: 20px;
+main div {
+    margin: 5rem 0;
 }
 
 main ul {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    display: flex;
+    justify-content: space-evenly;
+
 }
 
-.itens {
-    font-style: italic;
+main ul li {
+    border: 2px solid black;
+    border-radius: 10px;
+    width: min-content;
+    text-align: center;
+    box-sizing: border-box;
 }
 
-.beneficios {
-    background: #ffffff;
-    padding: 20px;
+main ul li:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-color: rgb(151, 114, 10);
 }
 
-.imagem-beneficios {
-    width: 50%;
+main ul li:hover h2 {
+    font-size: 24px;
+}
+
+main ul li:active {
+    border-color: #088c19;
+}
+
+main ul li h2 {
+    text-align: center;
+}
+
+main ul li div {
+    margin: 1.5rem 0.25rem;
+}
+
+.moeda {
+    font-weight: bold;
+    font-size: 22px;
+    margin-top: 1.5rem;
+}
+
+.descricao {
+    font-size: 18px;
+}
+
+footer {
+    padding: 40px 0;
+    text-align: center;
+    background: url(./imagens/bg.jpg);
+}
+
+.copyright {
+    color: white;
+    font-size: 13PX;
+    margin: 20px 0 0;
 }
